# dv-flow-mgr

./: .buildinfo  .envrc  .gitignore  Agents.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  DOCS_REORG_DESIGN.md  DOCS_REORG_PLAN.md  DOCUMENTATION_PLAN.md  DOCUMENTATION_STATUS.md  DOCUMENTATION_SUMMARY.md  FEATURES_COMPARISON.md  FEATURES_DOCS.md  FEATURES_SRC.md  PACKAGE_OVERRIDE_REMOVAL.md  PACKAGE_OVERRIDE_REMOVAL_SUMMARY.md  README.md  SKIPPED_TESTS_SUMMARY.md  TAG_IMPLEMENTATION_SUMMARY.md  VISIBILITY_IMPLEMENTATION_CHECKLIST.md  VISIBILITY_IMPLEMENTATION_SUMMARY.md  cmdref.html  flow.yaml  genindex.html  incremental.html  index.html  install.html  intro.html  ivpm.yaml  llms.html  llms.txt  objects.inv  pyproject.toml  pytask_api.html  pytest.ini  quickstart.html  reference.html  search.html  searchindex.js  stdlib.html  task_runners.html
.clinerules/: 01-testing.md
MyTask/: MyTask.exec_data.json
MyTask1/: MyTask1.exec_data.json
MyTask2/: MyTask2.exec_data.json
MyTask3/: MyTask3.exec_data.json
_sources/: cmdref.rst.txt  index.rst.txt  install.rst.txt  intro.rst.txt  llms.rst.txt  pytask_api.rst.txt  quickstart.rst.txt
ai/: agent_resources.html  index.html  native_agent.html  overview.html  using_with_agents.html
consume_files/: consume_files.exec_data.json
consumer/: consumer.exec_data.json
docs/: ChangeLog.md  KeyArchitecture.md  Notes.md  Roadmap.md  Steps.md  SupportVariableReferences.md  cache.md  cmdref.rst  conf.py  incremental.rst  index.rst  llms.rst  llms_command.md  named_fragments.md  package_config.md  pytask_api.rst  quickstart.rst  tags.md  task_runners.rst  taskdeps.md  visibility.md  visibility_example.md
foo.entry.file2/: foo.entry.file2.exec_data.json
guide/: advanced.html  caching.html  concepts.html  configurations.html  control_flow.html  dataflow.html  developing_tasks.html  error_handling.html  expressions.html  filters.html  incremental.html  index.html  packages.html  parameters.html  python_tasks.html  runners.html  running.html  script_io.html  stdlib.html  tasks.html  visibility.html
passthrough/: passthrough.exec_data.json
producer/: producer.exec_data.json
reference/: cli.html  flow_spec.html  index.html  python_api.html  resource_tags.html  runner_backend_api.html  runner_config.html  types_api.html
schema/: flow.dv.schema.json
tests/: conftest.py  conftest_lsf.py  test_deferred_expr.py  test_enhanced_filters.py  test_filter_def.py  test_filter_evaluation.py  test_jq_builtins.py  (+2 more)
(+460 files in other folders)
